FIxed background alignment

--- a/client/ios.css
+++ b/client/ios.css
@@ -4,7 +4,7 @@
  @import url("inc/reset.css");
 
  html { 
-   background: url(background.jpg) no-repeat center center fixed; 
+   background: url(inc/background.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
